[package]
name = "dabao-tester-app"
version = "0.1.0"
edition = "2021"

[dependencies]
utralib = { version = "0.1.27", optional = true, default-features = false }
xous-names = { package = "xous-api-names", version = "0.9.71" }
ticktimer = { package = "xous-api-ticktimer", version = "0.9.70" }
xous = "0.9.70"
log-server = { package = "xous-api-log", version = "0.1.69" }
log = "0.4.14"
num-derive = { version = "0.4.2", default-features = false }
num-traits = { version = "0.2.14", default-features = false }
bao1x-hal = { features = [
    "std",
], optional = true, git = "https://github.com/betrusted-io/xous-core", rev = "c38214865fc5fa55f886d2f35a411da233effd3f" }
bao1x-api = { git = "https://github.com/betrusted-io/xous-core", rev = "c38214865fc5fa55f886d2f35a411da233effd3f" }
bao1x-hal-service = { optional = true, git = "https://github.com/betrusted-io/xous-core", rev = "c38214865fc5fa55f886d2f35a411da233effd3f" }
bao1x-emu = { optional = true, git = "https://github.com/betrusted-io/xous-core", rev = "c38214865fc5fa55f886d2f35a411da233effd3f" }
usb-bao1x = { git = "https://github.com/betrusted-io/xous-core", rev = "c38214865fc5fa55f886d2f35a411da233effd3f" }
bytemuck = "1.24.0"

aes = { default-features = false, optional = true, git = "https://github.com/betrusted-io/xous-core", rev = "c38214865fc5fa55f886d2f35a411da233effd3f" }

bio-lib = { git = "https://github.com/betrusted-io/xous-core", rev = "c38214865fc5fa55f886d2f35a411da233effd3f" }
arbitrary-int = "1.2"

getrandom = "=0.2.12"

[patch.crates-io.getrandom]
git = "https://github.com/betrusted-io/xous-core"
rev = "c38214865fc5fa55f886d2f35a411da233effd3f"

[features]
bao1x = ["utralib/bao1x", "usb-bao1x/bao1x", "aes/bao1x"]
board-dabao = [
    "bao1x-hal-service/board-dabao",
    "bao1x-hal/board-dabao",
    # "bao1x-hal/debug-print-uart",
    "usb-bao1x/board-dabao",
]
ctap-bringup = []
usb = []
aestests = ["aes"]
default = ["usb"]
